--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "docker:up": "docker compose -f infra/compose.yaml up -d"
   },
   "author": "",
   "license": "MIT",
